--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 dj-database-url==0.5.0
 Django==3.2.8
 django-3-jet==1.0.8
+django-countries==7.2.1
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.12.4
